# assetpipe

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-04-02-project-style-management.md
docs/superpowers/specs/: 2026-04-02-project-style-management-design.md
mcp-server/: requirements.txt  server.py
mcp-server/providers/: gemini.py
mcp-server/utils/: __init__.py  background.py  styles.py
skill/: SKILL.md
tests/: test_styles.py
