[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assetpipe"
version = "0.1.0"
description = "AI image generation pipeline for web design — Claude Code Skill + MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "claude-code", "image-generation", "web-design", "gemini", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "google-genai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/assetpipe"
Repository = "https://github.com/YOUR_USERNAME/assetpipe"
Issues = "https://github.com/YOUR_USERNAME/assetpipe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp-server*"]
